update package requirements

--- a/SimpleCSE/requirements.txt
+++ b/SimpleCSE/requirements.txt
@@ -1,11 +1,9 @@
-numpy==1.21.6
-matplotlib
-scikit-learn==1.0.2
-opencv-python
-pandas
-scikit-image
+numpy
 xmltodict
-aicsimageio==4.9.4
+pandas
 pint
-bfio
-bioformats_jar
+scipy
+scikit-image
+scikit-learn
+tifffile
+aicsimageio
